--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Hi,ImSaeed.WebDeveloperIm a Web Developer mainly Focused onFrontend (JavaScript)" />
+    <link rel="icon" type="image/x-icon" href="/src/assets/images/react.png">
     <title>Saeed portfolio</title>
   </head>
   <body>
