--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Hi,ImSaeed.WebDeveloperIm a Web Developer mainly Focused onFrontend (JavaScript)" />
-    <link rel="icon" type="image/x-icon" href="/src/assets/images/react.png">
     <title>Saeed portfolio</title>
   </head>
   <body>
